--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,15 +1,19 @@
-@import 'tailwindcss';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
-
-@theme {
+@layer base {
+  :root {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+      'Segoe UI Symbol', 'Noto Color Emoji';
+  }
 }
 
 [x-cloak] {
-    display: none !important;
+  display: none !important;
 }
+
+body {
+  font-family: sans-serif;
+}
+
